# controllino_rp2040_firmware

./: .gitignore  CMakeLists.txt  README.md  neo_core_pin_micro.cpp  pins_arduino_micro.h  platformio.ini
drivers/: CMakeLists.txt
drivers/ad56x4/: CMakeLists.txt
drivers/ad56x4/include/: ad56x4.h
drivers/ad56x4/src/: ad56x4.c
drivers/cy8c95xx/: CMakeLists.txt
drivers/cy8c95xx/include/: cy8c95xx.h
drivers/cy8c95xx/src/: cy8c95xx.c
drivers/include/: ad56x4.h  bts71220.h  cy8c95xx.h  mcp356x.h  wsen_temp.h
drivers/src/: ad56x4.c  bts71220.c  cy8c95xx.c  mcp356x.c  wsen_temp.c
example/: main.c  (+2 more)
example/ad5664/: CMakeLists.txt  main.c
example/cy8c9520/: CMakeLists.txt
example/mcp3564/: CMakeLists.txt  main.c
examples/pico_sdk/drv/ad5664/: CMakeLists.txt  main.c
examples/pico_sdk/drv/bts71220/: CMakeLists.txt  main.c
examples/pico_sdk/drv/cy8c9520/: CMakeLists.txt  main.c
examples/pico_sdk/drv/mcp3564/: CMakeLists.txt  main.c
examples/pico_sdk/drv/wsen_temp/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/Wire/: library.json
lib/arduino_modbus/: library.json
lib/arduino_modbus/src/libmodbus/: modbus.c
lib/arduino_native_mock/: library.json
lib/arduino_native_mock/include/: Arduino.h
lib/arduino_native_mock/src/: digital.cpp  gpio.cpp  mock_analog.cpp
lib/arduino_pico_core/: neo_core_pins.cpp  neo_pin.cpp  neo_pin.h  pins_arduino.h
lib/arduino_pico_neo_core/: library.json  neo_core_pin.cpp  neo_core_pins.cpp  pins_arduino.h
lib/arduino_pico_neo_core/include/: neo_core_diag.h  neo_core_pin.h  pins_arduino.h
lib/arduino_pico_neo_core/src/: neo_core_diag.cpp  neo_core_drv.cpp  neo_core_pin.cpp  neo_core_pins.cpp
lib/arduino_pico_neo_core_pins/: neo_core_pins.cpp  pins_arduino.h
lib/arduino_pico_neo_pin/: neo_pin.cpp  neo_pin.h
lib/arduino_wire/: Wire.cpp  Wire.h  library.json
lib/controllino_drivers/: library.json
lib/controllino_drivers/include/: ad5664.h  ad56x4.h  bts71220.h  cy8c9520.h  cy8c95xx.h  mcp23s17.h  mcp3564.h  mcp356x.h  mcp4461.h  wsen_temp.h
lib/controllino_drivers/src/: bts71220.c  cy8c9520.c  cy8c95xx.c  mcp23s17.c  mcp3564.c  mcp356x.c  wsen_temp.c
lib/controllino_hw_arduino/: library.json
lib/controllino_hw_arduino/src/: hw_arduino_gpio.cpp  hw_arduino_i2c.cpp  hw_arduino_spi.cpp
lib/controllino_hw_rp2040/: library.json
lib/controllino_hw_rp2040/src/: hw_rp2040_spi.c
lib/controllino_micro/include/: controllino_diag.h  controllino_pins.h  pins_arduino.h
lib/controllino_micro/src/: controlino_micro.cpp  controllino_diag.cpp
lib/controllino_neo/: library.json
lib/controllino_neo/include/: controllino_diag.h  controllino_pins.h  pins_arduino.h
lib/controllino_neo/src/: controlino_neo.cpp  controllino_diag.cpp
lib/controllino_rp2040/: library.json
lib/controllino_rp2040/include/: controllino_driver.h
lib/controllino_rp2040/src/: wiring_analog.cpp  wiring_digital.cpp
lib/controllino_wiring/: library.json
lib/controllino_wiring/include/: controllino_wiring.h
lib/controllino_wiring/src/: controllino_wiring_analog.cpp  controllino_wiring_digital.cpp
lib/drivers/: CMakeLists.txt  library.json
lib/drivers/include/: ad56x4.h  adg728.h  bts71220.h  cy8c95xx.h  hw_platform.h  mcp3564.h  mcp356x.h  wsen_temp.h
lib/drivers/src/: ad5664.c  ad56x4.c  bts71220.c  cy8c95xx.c  mcp356x.c  wsen_temp.c
lib/hw/: library.json
lib/hw/src/: hw_gpio.cpp  hw_i2c.cpp  hw_spi.cpp  hw_timing.cpp
lib/hw_arduino/: library.json
lib/hw_arduino/src/: hw_arduino_gpio.cpp  hw_arduino_i2c.cpp  hw_arduino_spi.cpp  hw_arduino_timing.cpp
lib/hw_dummy/src/: hw_dummy.c  hw_dummy_gpio.c  hw_dummy_i2c.c  hw_dummy_spi.c  hw_dummy_timing.c
lib/hw_rp2/: library.json
lib/hw_rp2040/: library.json
lib/hw_rp2040/src/: hw_rp2040.c  hw_rp2040_gpio.c  hw_rp2040_i2c.c  hw_rp2040_spi.c
lib/micro/: library.json
lib/micro/include/: pins_arduino.h
lib/micro/src/: micro.cpp
lib/wiring/: library.json
lib/wiring/src/: wiring_analog.cpp  wiring_digital.cpp
test/: CMakeLists.txt  hw_dummy_gpio.c  hw_dummy_i2c.c  hw_dummy_spi.c  hw_dummy_timing.c  hw_mock_gpio.c  hw_mock_gpio.cpp  hw_mock_i2c.cpp  hw_mock_spi.cpp  hw_mock_timing.c  test_ad56x4.c  test_bts71220.c  test_config.h  test_cy8c95xx.c  test_mcp356x.c  test_runner.cpp  test_wsen_temp.c  unity_config.cpp  unity_config.h  unity_test_runner.cpp  unity_test_runner.h
test/ad56x4/: CMakeLists.txt  main.c
test/arduino/: mock_arduino.cpp  mock_arduino_pin.cpp  mock_rp2040.cpp
test/arduino/include/: Arduino.h
test/arduino/micro/interrupts/test_micro_interrupts/: test_micro_interrupts.cpp
test/arduino/micro/pin/test_micro_pin/: test_micro_pin.cpp
test/arduino/neo_core/: hw_mock_spi.cpp
test/arduino/neo_core/pin/: hw_mock_i2c.cpp
test/arduino/neo_core/pin/test_neo_pin_ad56x4/: ad56x4_mock_spi.cpp  mock_i2c.cpp  test_neo_pin_ad56x4.cpp
test/arduino/neo_core/pin/test_neo_pin_cy8c95xx/: cy8c95xx_mock_i2c.cpp  test_neo_pin_cy8c95xx.cpp
test/arduino/neo_core/pin/test_neo_pin_mcp356x/: mcp356x_mock_spi.cpp  test_neo_pin_mcp356x.cpp
test/cy8c95xx/: CMakeLists.txt  main.c
test/drivers/: chip_select.cpp  chip_select.h
test/drivers/ad56x4/test_ad56x4_driver/: test_ad56x4_driver.cpp
test/drivers/bts71220/test_bts71220_driver/: test_bts71220_driver.cpp
test/gpio/hw/common/test_platform_gpio/: test_platform_gpio.cpp
test/hw_platform/hw_common/test_hw_gpio/: test_hw_gpio.c  test_hw_gpio.cpp
test/hw_platform/hw_common/test_platform_gpio/: test_platform_gpio.cpp
test/hw_platform/hw_common/test_platform_i2c/: test_platform_i2c.cpp
test/hw_platform/hw_common/test_platform_spi/: test_platform_spi.cpp
test/hw_platform/hw_common/test_platform_timing/: test_platform_timing.cpp
test/hw_platform/hw_neo_rp2040/test_hw_gpio/: test_hw_gpio.cpp
test/hw_platform/hw_neo_rp2040/test_platform_gpio/: test_platform_gpio.cpp
test/hw_platform/hw_neo_rp2040/test_platform_i2c/: test_platform_i2c.cpp
test/hw_platform/hw_neo_rp2040/test_platform_spi/: test_platform_spi.cpp
test/i2c/: hw_dummy_i2c.c  hw_mock_i2c.c
test/spi/: hw_dummy_spi.c  hw_mock_spi.c
(+148 files in other folders)
